test/test_units/test_kclvm/test_types/invalid_test_data/attr_op/attr_op_0.k
a = {
    key1 = [0]  # [0]
    key1 += [1]  # [0, 1]
    key1 += None  # Error: only list type can in inserted
}
